--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:simple": "npm run build -- --no-scope-hoist",
     "start": "npm run build && npm run serve",
     "start:simple": "npm run build:simple && npm run serve",
+    "watch": "parcel watch src/index.html",
     "serve": "serve dist"
   },
   "repository": {
@@ -22,7 +23,7 @@
   },
   "homepage": "https://github.com/garthenweb/parcel-bug-report-examples#readme",
   "devDependencies": {
-    "parcel": "^2.0.0-nightly.163",
+    "parcel": "^2.0.0-nightly.226",
     "serve": "^11.3.0"
   }
 }
