--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:simple": "npm run build -- --no-scope-hoist",
     "start": "npm run build && npm run serve",
     "start:simple": "npm run build:simple && npm run serve",
-    "watch": "parcel watch src/index.html",
+    "watch": "parcel watch src/index.js",
     "serve": "serve dist"
   },
   "repository": {
@@ -24,6 +24,6 @@
   "homepage": "https://github.com/garthenweb/parcel-bug-report-examples#readme",
   "devDependencies": {
     "parcel": "^2.0.0-nightly.226",
-    "serve": "^11.3.0"
+    "parcel-runtime-test": "file:./parcel-runtime-test"
   }
 }
